--- a/PooVueling/Log4net.config
+++ b/PooVueling/Log4net.config
@@ -14,7 +14,7 @@
       </mapping>
     </appender>
     <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
-      <file value="..\..\Log\Error.log" />
+      <file value="..\..\Error.txt" />
       <appendToFile value="true" />
       <maximumFileSize value="100KB" />
       <maxSizeRollBackups value="2" />
